--- a/src/InvoiceBundle/Resources/views/main.html.twig
+++ b/src/InvoiceBundle/Resources/views/main.html.twig
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.min.css') }}">
+    <link rel="stylesheet" href="{{ absolute_url(asset('css/bootstrap.min.css')) }}">
+    <link rel="stylesheet" href="{{ absolute_url(asset('css/bootstrap-theme.min.css')) }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 {% block body %}{% endblock %}
-<script type="text/javascript" src="{{ asset('js/jquery-3.1.1.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js/app.js') }}"></script>
+<script type="text/javascript" src="{{ absolute_url(asset('js/jquery-3.1.1.min.js')) }}"></script>
+<script type="text/javascript" src="{{ absolute_url(asset('js/bootstrap.min.js')) }}"></script>
+<script type="text/javascript" src="{{ absolute_url(asset('js/app.js')) }}"></script>
 </body>
 </html>
