--- a/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
@@ -18,12 +18,13 @@ Nowa faktura
     </div>
     <div class="col-sm-12"><hr></div>
     <div id="data">
+
         <div class="col-sm-6" id="seller">
             <h3>Sprzedawca:</h3>
             <div class="form-group col-sm-12"><label class="col-sm-3">Nazwa</label><input type="text" class="col-sm-9" name="seller_name"></div>
             <div class="form-group col-sm-12"><label class="col-sm-3">Adres</label><input type="text" class="col-sm-9" name="seller_address"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" class="col-sm-9" name="seller_city"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" class="col-sm-9" name="seller_postal"></div>
+            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" name="seller_city"></div>
+            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" name="seller_postal"></div>
             <div class="form-group col-sm-12"><label class="col-sm-3">NIP</label><input type="text" name="seller_NIP"></div>
         </div>
 
@@ -31,9 +32,9 @@ Nowa faktura
             <h3>Nabywca:</h3>
             <div class="form-group col-sm-12"><label class="col-sm-3">Nazwa</label><input type="text" class="col-sm-9" name="client_name"></div>
             <div class="form-group col-sm-12"><label class="col-sm-3">Adres</label><input type="text" class="col-sm-9" name="client_address"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" class="col-sm-9" name="client_city"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" class="col-sm-9" name="client_NIP"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">NIP</label><input type="text"></div>
+            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" name="client_city"></div>
+            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" name="client_postal"></div>
+            <div class="form-group col-sm-12"><label class="col-sm-3">NIP</label><input type="text" name="client_NIP"></div>
         </div>
     </div>
     <div class="col-sm-12"><hr></div>
@@ -54,13 +55,13 @@ Nowa faktura
             <tbody>
                 <tr class="product_row">
                     <td>1</td>
-                    <td class="product_name"><input type="text" name="product_name[]"></td>
-                    <td class="product_quantity"><input type="number" name="product_quantity[]"></td>
-                    <td class="netto_price"><input type="number" name="netto_price[]"></td>
-                    <td class="netto_value"><input type="number" disabled="disabled" name="netto_value[]"></td>
-                    <td class="vat"><input type="number" value="23" disabled="disabled" name="vat[]"></td>
-                    <td class="vat_value"><input type="number" disabled="disabled" name="vat_value[]"></td>
-                    <td class="brutto_value"><input type="number" disabled="disabled" name="brutto_value[]"></td>
+                    <td class="product_name"><input type="text" name="product[0][product_name]"></td>
+                    <td class="product_quantity"><input type="number" name="product[0][product_quantity]"></td>
+                    <td class="netto_price"><input type="number" name="product[0][netto_price]"></td>
+                    <td class="netto_value"><input type="number" readonly="readonly" name="product[0][netto_value]"></td>
+                    <td class="vat"><input type="number" value="23" readonly="readonly" name="product[0][vat]"></td>
+                    <td class="vat_value"><input type="number" readonly="readonly" name="product[0][vat_value]"></td>
+                    <td class="brutto_value"><input type="number" readonly="readonly" name="product[0][brutto_value]"></td>
                 </tr>
             </tbody>
         </table>
@@ -91,7 +92,7 @@ Nowa faktura
     <div class="col-sm-12"><hr></div>
     <div class="col-sm-12">
         <p>Uwagi</p>
-        <textarea class="col-sm-12"></textarea>
+        <textarea class="col-sm-12" name="comment"></textarea>
     </div>
     <input type="submit" value="Generuj" class="btn">
 </form>
