--- a/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
@@ -7,39 +7,43 @@ Nowa faktura
 
 <form class="form-horizontal" method="POST">
     <div id="header">
-        <div class="col-sm-6">
-            <div class="form-group col-sm-12"><label class="col-sm-3">Faktura nr: </label><input type="text" class="col-sm-9" name="invoice_number"></div>
+        <div class="col-lg-6">
+            <div class="form-group col-lg-12"><label class="col-lg-3">Faktura nr: </label><input type="text" class="col-lg-9" name="invoice_number"></div>
         </div>
-        <div class="col-sm-6">
-            <div class="form-group col-sm-12"><label class="col-sm-6">Data wystawienia:</label><input type="date" class="col-sm-6" name="generation_date"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-6">Data zakończenia usługi:</label><input type="date" class="col-sm-6" name="completion_date"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-6">Miejsce wystawienia</label><input type="text" class="col-sm-6" name="place"></div>
+        <div class="col-lg-6">
+            <div class="form-group col-lg-12"><label class="col-lg-6">Data wystawienia:</label><input type="date" class="col-lg-6" name="generation_date"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-6">Data zakończenia usługi:</label><input type="date" class="col-lg-6" name="completion_date"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-6">Miejsce wystawienia</label><input type="text" class="col-lg-6" name="place"></div>
         </div>
     </div>
-    <div class="col-sm-12"><hr></div>
+    <div class="col-lg-12"><hr></div>
     <div id="data">
 
-        <div class="col-sm-6" id="seller">
+        <div class="col-lg-6" id="seller">
             <h3>Sprzedawca:</h3>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Nazwa</label><input type="text" class="col-sm-9" name="seller_name"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Adres</label><input type="text" class="col-sm-9" name="seller_address"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" name="seller_city"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" name="seller_postal"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">NIP</label><input type="text" name="seller_NIP"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Nazwa</label><input type="text" name="seller_name"><button id="seller_search">znajdź</button></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Adres</label><input type="text" name="seller_address"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Miejscowość</label><input type="text" name="seller_city"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Kod pocztowy</label><input type="text" name="seller_postal"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">NIP</label><input type="text" name="seller_NIP"></div>
         </div>
 
-        <div class="col-sm-6" id="seller">
+        <div class="col-lg-6" id="seller">
             <h3>Nabywca:</h3>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Nazwa</label><input type="text" class="col-sm-9" name="client_name"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Adres</label><input type="text" class="col-sm-9" name="client_address"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Miejscowość</label><input type="text" name="client_city"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">Kod pocztowy</label><input type="text" name="client_postal"></div>
-            <div class="form-group col-sm-12"><label class="col-sm-3">NIP</label><input type="text" name="client_NIP"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Nazwa</label>
+                <input type="text" name="client_name" list="clients">
+                <datalist id="clients">
+                </datalist>
+            </div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Adres</label><input type="text" name="client_address"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Miejscowość</label><input type="text" name="client_city"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">Kod pocztowy</label><input type="text" name="client_postal"></div>
+            <div class="form-group col-lg-12"><label class="col-lg-3">NIP</label><input type="text" name="client_NIP"></div>
         </div>
     </div>
-    <div class="col-sm-12"><hr></div>
-    <div class="col-sm-12" id="table">
-        <table id="products" class="table">
+    <div class="col-lg-12"><hr></div>
+    <div class="col-lg-12 table-responsive" id="table">
+        <table id="products" class="table col-lg-12">
             <thead>
             <tr>
                 <th>Lp.</th>
@@ -68,9 +72,9 @@ Nowa faktura
         <button class="btn" id="count_btn">Przelicz</button>
         <button class="btn" id="add_btn">Dodaj wiersz</button>
     </div>
-    <div class="col-sm-12" id="sum">
-        <div class="col-sm-6"></div>
-        <div class="col-sm-6"><table class="table">
+    <div class="col-lg-12" id="sum">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6"><table class="table">
             <thead>
             <tr>
                 <th>VAT</th>
@@ -89,15 +93,15 @@ Nowa faktura
             </tbody>
         </table></div>
     </div>
-    <div class="col-sm-12"><hr></div>
-    <div class="col-sm-12">
+    <div class="col-lg-12"><hr></div>
+    <div class="col-lg-12">
         <label for="comment">Uwagi</label>
-        <textarea class="form-control col-sm-12" name="comment" placeholder="Np. informacja o zwolnieniu z VAT"></textarea>
+        <textarea class="form-control col-lg-12" name="comment" placeholder="Np. informacja o zwolnieniu z VAT"></textarea>
     </div>
-    <div class="col-sm-12">
+    <div class="col-lg-12">
         <hr>
     </div>
-    <div class="col-sm-12">
+    <div class="col-lg-12">
         <p><input type="submit" value="Generuj" class="btn"></p>
     </div>
 </form>
