--- a/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
@@ -8,12 +8,24 @@ Nowa faktura
 <form class="form-horizontal" method="POST">
     <div id="header">
         <div class="col-lg-6">
-            <div class="form-group col-lg-12"><label class="col-lg-3">Faktura nr: </label><input type="text" class="col-lg-9" name="invoice_number"></div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Faktura nr: </label>
+                <div class="col-lg-9"><input type="text" class="form-control" name="invoice_number"></div>
+            </div>
         </div>
         <div class="col-lg-6">
-            <div class="form-group col-lg-12"><label class="col-lg-6">Data wystawienia:</label><input type="date" class="col-lg-6" name="generation_date"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-6">Data zakończenia usługi:</label><input type="date" class="col-lg-6" name="completion_date"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-6">Miejsce wystawienia</label><input type="text" class="col-lg-6" name="place"></div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Data wystawienia:</label>
+                <div class="col-lg-9"><input type="date" class="form-control"" name="generation_date"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Data zakończenia usługi:</label>
+                <div class="col-lg-9"><input type="date" class="form-control" name="completion_date"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Miejsce wystawienia</label>
+                <div class="col-lg-9"><input type="text" class="form-control" name="place"></div>
+            </div>
         </div>
     </div>
     <div class="col-lg-12"><hr></div>
@@ -21,24 +33,50 @@ Nowa faktura
 
         <div class="col-lg-6" id="seller">
             <h3>Sprzedawca:</h3>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Nazwa</label><input type="text" name="seller_name"><button id="seller_search">znajdź</button></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Adres</label><input type="text" name="seller_address"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Miejscowość</label><input type="text" name="seller_city"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Kod pocztowy</label><input type="text" name="seller_postal"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">NIP</label><input type="text" name="seller_NIP"></div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Nazwa</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_name"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Adres</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_address"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Miejscowość</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_city"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Kod pocztowy</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_postal"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">NIP</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_NIP"></div>
+            </div>
         </div>
 
         <div class="col-lg-6" id="seller">
             <h3>Nabywca:</h3>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Nazwa</label>
-                <input type="text" name="client_name" list="clients">
-                <datalist id="clients">
-                </datalist>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Nazwa</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_name" list="clients"></div>
             </div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Adres</label><input type="text" name="client_address"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Miejscowość</label><input type="text" name="client_city"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">Kod pocztowy</label><input type="text" name="client_postal"></div>
-            <div class="form-group col-lg-12"><label class="col-lg-3">NIP</label><input type="text" name="client_NIP"></div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Adres</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_address"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Miejscowość</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_city"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">Kod pocztowy</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_postal"></div>
+            </div>
+            <div class="form-group col-lg-12">
+                <label class="col-lg-3 control-label">NIP</label>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_NIP"></div>
+            </div>
         </div>
     </div>
     <div class="col-lg-12"><hr></div>
@@ -95,7 +133,7 @@ Nowa faktura
     </div>
     <div class="col-lg-12"><hr></div>
     <div class="col-lg-12">
-        <label for="comment">Uwagi</label>
+        <label for="comment" class="control-label">Uwagi</label>
         <textarea class="form-control col-lg-12" name="comment" placeholder="Np. informacja o zwolnieniu z VAT"></textarea>
     </div>
     <div class="col-lg-12">
