--- a/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/new.html.twig
@@ -35,7 +35,7 @@ Nowa faktura
             <h3>Sprzedawca:</h3>
             <div class="form-group col-lg-12">
                 <label class="col-lg-3 control-label">Nazwa</label>
-                <div class="col-lg-9"><input class="form-control" type="text" name="seller_name"></div>
+                <div class="col-lg-9"><input class="form-control" type="text" name="seller_name" id="seller_name"></div>
             </div>
             <div class="form-group col-lg-12">
                 <label class="col-lg-3 control-label">Adres</label>
@@ -59,7 +59,7 @@ Nowa faktura
             <h3>Nabywca:</h3>
             <div class="form-group col-lg-12">
                 <label class="col-lg-3 control-label">Nazwa</label>
-                <div class="col-lg-9"><input class="form-control" type="text" name="client_name" list="clients"></div>
+                <div class="col-lg-9"><input class="form-control" type="text" name="client_name" id="client_name"></div>
             </div>
             <div class="form-group col-lg-12">
                 <label class="col-lg-3 control-label">Adres</label>
@@ -97,13 +97,27 @@ Nowa faktura
             <tbody>
                 <tr class="product_row">
                     <td>1</td>
-                    <td class="product_name"><input type="text" name="product[0][product_name]"></td>
-                    <td class="product_quantity"><input type="number" name="product[0][product_quantity]"></td>
-                    <td class="netto_price"><input type="number" name="product[0][netto_price]"></td>
-                    <td class="netto_value"><input type="number" readonly="readonly" name="product[0][netto_value]"></td>
-                    <td class="vat"><input type="number" value="23" readonly="readonly" name="product[0][vat]"></td>
-                    <td class="vat_value"><input type="number" readonly="readonly" name="product[0][vat_value]"></td>
-                    <td class="brutto_value"><input type="number" readonly="readonly" name="product[0][brutto_value]"></td>
+                    <td class="product_name">
+                        <input type="text" name="product[0][product_name]">
+                    </td>
+                    <td class="product_quantity">
+                        <input type="number" name="product[0][product_quantity]">
+                    </td>
+                    <td class="netto_price">
+                        <input type="number" name="product[0][netto_price]">
+                        </td>
+                    <td class="netto_value">
+                        <input type="number" readonly="readonly" name="product[0][netto_value]">
+                    </td>
+                    <td class="vat">
+                        <input type="number" value="23" readonly="readonly" name="product[0][vat]">
+                    </td>
+                    <td class="vat_value">
+                        <input type="number" readonly="readonly" name="product[0][vat_value]">
+                    </td>
+                    <td class="brutto_value">
+                        <input type="number" readonly="readonly" name="product[0][brutto_value]">
+                    </td>
                 </tr>
             </tbody>
         </table>
