--- a/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
@@ -21,9 +21,9 @@
             <div class="form-group col-xs-12"><label class="col-xs-3">Faktura nr: </label><div class="col-xs-9">{{ invoice.invoiceNumber }}</div></div>
         </div>
         <div class="col-xs-6">
-            <div class="form-group col-xs-12"><label class="col-xs-6">Data wystawienia:</label><div class="col-xs-6">{{ invoice.generationDate }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Data zakończenia usługi:</label><div class="col-xs-6">{{ invoice.completionDate }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Miejsce wystawienia</label><div class="col-xs-6">{{ invoice.place }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Data wystawienia:</label><div class="col-xs-6">{{ invoice.generationDate }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Data zakończenia usługi:</label><div class="col-xs-6">{{ invoice.completionDate }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejsce wystawienia</label><div class="col-xs-6">{{ invoice.place }}</div></div>
         </div>
     </div>
     <div class="col-xs-12"><hr></div>
@@ -31,20 +31,20 @@
 
         <div class="col-xs-6" id="seller">
             <h3>Sprzedawca:</h3>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Nazwa</label><div class="col-xs-6"></div>{{ invoice.seller.sellerName }}</div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Adres</label><div class="col-xs-6">{{ invoice.seller.sellerAddress }}</div></div>
-                <div class="form-group col-xs-12"><label class="col-xs-6">Miejscowość</label><div>{{ invoice.seller.sellerCity }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Kod pocztowy</label><div>{{ invoice.seller.sellerPostal }}</div></div>
-                <div class="form-group col-xs-12"><label class="col-xs-6">NIP</label><div>{{ invoice.seller.sellerNIP }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.seller.sellerName }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.seller.sellerAddress }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.seller.sellerCity }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.seller.sellerPostal }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.seller.sellerNIP }}</div></div>
         </div>
 
         <div class="col-xs-6" id="client">
             <h3>Nabywca:</h3>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Nazwa</label><div class="col-xs-6"></div>{{ invoice.client.clientName }}</div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Adres</label><div class="col-xs-6">{{ invoice.client.clientAddress }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Miejscowość</label><div>{{ invoice.client.clientCity }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">Kod pocztowy</label><div>{{ invoice.client.clientPostal }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6">NIP</label><div>{{ invoice.client.clientNIP }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.client.clientName }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.client.clientAddress }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.client.clientCity }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.client.clientPostal }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.client.clientNIP }}</div></div>
         </div>
     </div>
     <div class="col-xs-12"><hr></div>
@@ -102,9 +102,18 @@
             </table></div>
     </div>
     <div class="col-xs-12"><hr></div>
-    <div class="col-xs-12">
-        <a href="{{ path('generatePDF',{'id': invoice.id} ) }}">Generuj PDF</a>
-    </div>
+    {# won't show on PDF#}
+    {% if app.request.attributes.get('_route') == 'showInvoice' %}
+        <div class="col-xs-12">
+            <a class="btn" href="{{ path('generatePDF',{'id': invoice.id} ) }}">Generuj PDF</a>
+        </div>
+    {% else %}
+    <footer class="footer">
+        <div class="container">
+        podpis
+        </div>
+    </footer>
+    {% endif %}
 </div>
 </body>
 </html>
