--- a/src/InvoiceBundle/Resources/views/Invoice/showAll.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showAll.html.twig
@@ -18,8 +18,8 @@ Wszystkie faktury
             <tr>
                 <td>{{ invoice.invoiceNumber }}</td>
                 <td>{{ invoice.generationDate }}</td>
-                <td>{{ invoice.seller.sellerName }} ({{ invoice.seller.sellerNIP }})</td>
-                <td>{{ invoice.client.clientName }} ({{ invoice.client.clientNIP }})</td>
+                <td>{{ invoice.seller.name }} ({{ invoice.seller.nip }})</td>
+                <td>{{ invoice.client.name }} ({{ invoice.client.nip }})</td>
                 <td><a class="btn" href="{{ path('showInvoice', {'id' : invoice.id}) }}">Pokaż</a></td>
                 <td><a class="btn" href="{{ path('generatePDF', {'id' : invoice.id}) }}">Pobierz</a></td>
             </tr>
