--- a/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
@@ -39,20 +39,20 @@
 
         <div class="col-xs-6" id="seller">
             <h3>Sprzedawca:</h3>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.seller.sellerName }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.seller.sellerAddress }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.seller.sellerCity }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.seller.sellerPostal }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.seller.sellerNIP }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.seller.name }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.seller.address }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.seller.city }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.seller.zipCode }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.seller.nip }}</div></div>
         </div>
 
         <div class="col-xs-6" id="client">
             <h3>Nabywca:</h3>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.client.clientName }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.client.clientAddress }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.client.clientCity }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.client.clientPostal }}</div></div>
-            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.client.clientNIP }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Nazwa</label><div class="col-xs-6">{{ invoice.client.name }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Adres</label><div class="col-xs-6">{{ invoice.client.address }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Miejscowość</label><div class="col-xs-6">{{ invoice.client.city }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Kod pocztowy</label><div class="col-xs-6">{{ invoice.client.zipCode }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-6 text-right">NIP</label><div class="col-xs-6">{{ invoice.client.nip }}</div></div>
         </div>
     </div>
     <div class="col-xs-12"><hr></div>
