invoice_number renamed to number, so invoice.number can be called instead of invoice.invoiceNumber. Refactoring - everything is working now. todo - ajax search and autocomplete

--- a/src/InvoiceBundle/Resources/views/Invoice/showAll.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showAll.html.twig
@@ -16,7 +16,7 @@ Wszystkie faktury
         <tbody>
             {% for invoice in invoices %}
             <tr>
-                <td>{{ invoice.invoiceNumber }}</td>
+                <td>{{ invoice.number }}</td>
                 <td>{{ invoice.generationDate }}</td>
                 <td>{{ invoice.seller.name }} ({{ invoice.seller.nip }})</td>
                 <td>{{ invoice.client.name }} ({{ invoice.client.nip }})</td>
