--- a/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
@@ -10,7 +10,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>Faktura {{ invoice.invoiceNumber }}</title>
+    <title>Faktura {{ invoice.number }}</title>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 <div class="container">
     <div id="header">
         <div class="col-xs-6">
-            <div class="form-group col-xs-12"><label class="col-xs-3">Faktura nr: </label><div class="col-xs-9">{{ invoice.invoiceNumber }}</div></div>
+            <div class="form-group col-xs-12"><label class="col-xs-3">Faktura nr: </label><div class="col-xs-9">{{ invoice.number }}</div></div>
         </div>
         <div class="col-xs-6">
             <div class="form-group col-xs-12"><label class="col-xs-6 text-right">Data wystawienia:</label><div class="col-xs-6">{{ invoice.generationDate }}</div></div>
