--- a/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
+++ b/src/InvoiceBundle/Resources/views/Invoice/showInvoice.html.twig
@@ -75,11 +75,11 @@
             {% for product in invoice.products %}
                 <tr class="product_row">
                     <td>1</td>
-                    <td class="product_name">{{ product.productName }}</td>
-                    <td class="product_quantity">{{ product.productQuantity }}</td>
+                    <td class="product_name">{{ product.name }}</td>
+                    <td class="product_quantity">{{ product.quantity }}</td>
                     <td class="netto_price">{{ product.nettoPrice }}</td>
                     <td class="netto_value">{{ product.nettoValue }}</td>
-                    <td class="vat">{{ product.vat * 100 }}%</td>
+                    <td class="vat">{{ product.vat }}%</td>
                     <td class="vat_value">{{ product.vatValue }}</td>
                     <td class="brutto_value">{{ product.bruttoValue }}</td>
                 </tr>
